# computer-graphics-project-2024

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Computer-graphics-project  Makefile  PropertySheet.props  PropertySheet_New.props  README.md  andrea_windows_libraries_instructions.txt  cmake_install.cmake  computer-graphics-project-2024.sln  computer-graphics-project-2024.vcxproj  computer-graphics-project-2024.vcxproj.filters  main.cpp  renderDoc.cap  windows_compile_shaders.bat
TEMP/: Bullet.hpp  BulletsPosition.hpp  Car.cpp  Car.hpp  CarPosition.hpp  Entity.cpp  Mike.cpp  TimeManager.hpp  Utils.hpp
blender_models/: fence.blend  fence.blend1
doc/: CG Project Flowchart.drawio
include/: Application.hpp  Bullet.hpp  BulletsPosition.hpp  Car.hpp  CarPosition.hpp  Entity.hpp  Mike.hpp  MikePosition.hpp  TimeManager.hpp  Upgrade.hpp  Utils.hpp
libraries/: TextMaker.hpp  glm_with_defines.hpp  starter.hpp
models/: Car.mtl  Fence.mtl  Upgrade.mtl  scene.json
modules/: CarPosition.hpp  MIkePosition.hpp  MikePosition.hpp  Starter.hpp
shaders/: BWFrag.spv  BWShader.frag  MikeFrag.spv  MikeShader.frag  MikeShader.vert  MikeVert.spv  Shader.vert  TitleFrag.spv  TitleShader.frag  TitleShader.vert  ToonFrag.spv  ToonNormalFrag.spv  ToonNormalShader.frag  ToonShader.frag  TrophyFrag.spv  TrophyShader.frag  TrophyShader.vert  TrophyVert.spv
src/: Application.cpp  Bullet.cpp  Car.cpp  Main.cpp  Mike.cpp  TimeManager.cpp  Upgrade.cpp
